Fix GUI errors